--- a/meu_site/templates/cadastrar-cliente.html
+++ b/meu_site/templates/cadastrar-cliente.html
@@ -3,7 +3,7 @@
 {% block titulo %}Cadastrar Cliente{% endblock %}
 
 {% block corpo %}
-<div style="display: flex; justify-content: center; flex-direction: column; width: 60%; margin-left: 20%; margin-top: 5%;">
+<div id="conteudo-dados">
     <div style=" display: flex; flex-direction: row; justify-content: center;">
     <h1><label class="text-primary">Cadastro de Clientes</label> </h1>
     </div>
