--- a/meu_site/templates/contato.html
+++ b/meu_site/templates/contato.html
@@ -3,7 +3,7 @@
 {% block titulo %}Contato{% endblock %}
 
 {% block corpo %}
-<div style="display: flex; justify-content: center; flex-direction: column; width: 60%; margin-left: 20%; margin-top: 5%;">
+<div id="conteudo-dados">
     <form action="">
 <div class="mb-3">
     <label for="textNome" class="form-label text-primary">Nome</label>
