--- a/meu_site/templates/lista-produtos.html
+++ b/meu_site/templates/lista-produtos.html
@@ -3,11 +3,11 @@
 {% block titulo %}Lista de Produtos{% endblock %}
 
 {% block corpo %}
-<div style="margin-left: 20%; width: 60%;">
+<div id="conteudo-dados">
     <div style=" display: flex; flex-direction: row; justify-content: center;">
-    <h1><label class="text-primary">Lista de Serviços</label> </h1>
+    <h1><label class="text-primary">Lista de Produtos</label> </h1>
     </div>
-    <input type="button" value="Novo" class="btn btn-primary" style="width: min-content;">
+    <a href="cadastro-produto"><input type="button" value="Novo" class="btn btn-primary"></a>
     <table class="table table-striped">
         <thead>
             <tr>
