--- a/meu_site/templates/lista-uf.html
+++ b/meu_site/templates/lista-uf.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 
-{% block titulo %}Lista de Serviços{% endblock %}
+{% block titulo %}UF{% endblock %}
 
 {% block corpo %}
 <div id="conteudo-dados">
     <div style=" display: flex; flex-direction: row; justify-content: center;">
-    <h1><label class="text-primary">Lista de Serviços</label> </h1>
+    <h1><label class="text-primary">Lista de UFs</label> </h1>
     </div>
-    <a href="cadastro-servico"><input type="button" value="Novo" class="btn btn-primary"></a>
+    <a href="cadastro-uf"><input type="button" value="Novo" class="btn btn-primary"></a>
     <table class="table table-striped">
         <thead>
             <tr>
