--- a/meu_site/templates/cabecalho.html
+++ b/meu_site/templates/cabecalho.html
@@ -1,7 +1,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Projeto Soft</a>
+      <a class="navbar-brand" href="home">Projeto Soft</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -21,6 +21,9 @@
               <li><a class="dropdown-item" href="lista-cliente">Cliente</a></li>
               <li><a class="dropdown-item" href="lista-produto">Produto</a></li>
               <li><a class="dropdown-item" href="lista-servico">Serviço</a></li>
+              <li><a class="dropdown-item" href="lista-tp-pessoa">Tipo Pessoa</a></li>
+              <li><a class="dropdown-item" href="lista-uf">UF</a></li>
+              <li><a class="dropdown-item" href="lista-cidade">Cidade</a></li>
             </ul>
           </li>          
         </ul>
